<resources>
    <string name="app_name">ABCJobs Empresa</string>
    <string name="DatosBasicosTitulo">Datos Basicos</string>
    <string name="AlarmasNuevaTitulo">Nueva Alarma</string>
    <string name="CandidatoConfigTitulo">Menu</string>
    <string name="ProyectosMenuTitulo">Proyectos</string>
    <string name="FiltrosTitulo">Filtros de busqueda </string>
    <string name="ListaCandidatosTitulo">Lista de Candidatos</string>
    <string name="EvaluacionDesempenoTitulo">Evaluacion de Desempeño</string>
    <string name="AlarmasDetencionTitulo">Modo detencion</string>
    <string name="AlarmasCompartirTitulo">Compartir</string>
    <string name="AlarmasRepeticionTitulo">Repetición</string>
    <string name="AlarmasNotficacionTitulo">Notificaciones</string>
    <string name="AsistentePaso1Titulo">Bienvenido</string>
    <string name="AsistentePaso1Desc">Ingrese la hora de la alarma</string>
    <string name="AsistentePaso2Titulo">Paso 2</string>
    <string name="AsistentePaso2Desc">Seleccione los días de la semana</string>
    <string name="AsistentePaso3Titulo">Paso 3</string>
    <string name="AsistentePaso3Desc">Seleccione el tiempo de repetición</string>
    <string name="AsistentePaso4Titulo">Paso 4</string>
    <string name="AsistentePaso4Desc">Seleccione un sonido</string>
    <string name="AsistentePaso5Titulo">Paso 5</string>
    <string name="AsistentePaso5Desc">Seleccione la forma de detener la alarma</string>
    <string name="AsistentePaso6Titulo">Paso 6</string>
    <string name="AsistentePaso6Desc">Ingrese un nombre para su nueva alarma</string>
    <!--texto Botones-->
    <string name="BotonCrear">Crear</string>
    <string name="BotonAceptar">Aceptar</string>
    <string name="BotonCancelar">Cancelar</string>
    <string name="BotonSiguiente">Siguiente</string>
    <string name="BotonAnterior">Anterior</string>
    <string name="BotonTonos">Tonos</string>
    <string name="BotonReloj">Reloj</string>
    <string name="BotonMusica">Música</string>
    <string name="BotonAm" translatable="false">AM</string>
    <string name="BotonPm" translatable="false">PM</string>
    <string name="BotonDatos">Mis Datos</string>
    <string name="BotonPruebas">Mis Pruebas</string>
    <string name="BotonEntrevistas">Mis Entrevistas</string>
    <string name="BotonPagos">Mis Pagos</string>
    <string name="BotonDatosEmpresa">Datos Básicos</string>
    <string name="BotonProyectos">Proyectos</string>
    <string name="BotonEntrevistasEmpresa">Entrevistas</string>
    <string name="BotonFacturas">Mis Facturas</string>
    <string name="BotonCrearProyecto">Crear Proyecto</string>
    <string name="BotonCandidatosProyecto">Candidatos</string>
    <string name="BotonDesempeñoProyecto">Evaluar Desempeño</string>
    <string name="BotonPerfilProyecto">Crear Perfil</string>
    <string name="BotonVolverDesc">Boton para Volver</string>
    <string name="BotonSonidoDesc">Boton para Sonido</string>
    <string name="BotonRepeticionDesc">Boton para retardar la alarma</string>
    <string name="BotonDetenerDesc">Boton para detener la alarma</string>
    <string name="BotonNotificacionDesc">Boton para notificaciones de la alarma</string>
    <string name="BotonCrearDesc">Boton para Crear</string>
    <string name="BotonCancelarDesc">Boton para Cancelar</string>
    <string name="BotonAceptarDesc">Boton para confirmar el proceso</string>
    <string name="BotonRelojDesc">Boton para seleccionar hora</string>
    <string name="Lenguaje1" translatable="false">Español</string>
    <string name="Lenguaje2" translatable="false">English</string>
    <!--label-->
    <string name="LabelUsuario">Usuario</string>
    <string name="LabelPassword">Clave</string>
    <string name="LabelIdioma">Cambiar Idioma</string>
    <string name="LabelRegistro">Eres Nuevo?:</string>
    <string name="LabelRegistro2">Registrate</string>
    <string name="LabelCorreo">Correo</string>
    <string name="LabelTipoDoc">Tipo Documento</string>
    <string name="LabelDocumento">Documento</string>
    <string name="LabelNombre">Nombre(s)</string>
    <string name="LabelApellido">Apellido(s)</string>
    <string name="LabelEdad">Edad</string>
    <string name="LabelDireccion">Direccion</string>
    <string name="LabelCiudad">Ciudad</string>
    <string name="LabelPais">Pais de Residencia</string>
    <string name="LabelOrigen">Pais de Origen</string>
    <string name="LabelTelefono">Telefono</string>
    <string name="LabelFoto">Foto</string>
    <string name="LabelPolitica">Acepta Politica de Datos</string>
    <string name="LabelProyecto">Proyecto</string>
    <string name="LabelPerfil">Perfil</string>
    <string name="LabelTecnologia">Tecnologias</string>
    <string name="LabelHabilidad">Habilidades</string>
    <string name="LabelTecnologias">Seleccione Tecnologias</string>
    <string name="LabelHabilidades">Seleccione Habilidades</string>
    <string name="LabelFiltroRol">Filtro Rol</string>
    <string name="LabelBuscarRol">Rol</string>
    <string name="LabelExperienciaRol">Años Experiencia</string>
    <string name="LabelFiltroTitulo">Filtro Titulo</string>
    <string name="LabelBuscarTitulo">Titulo</string>
    <string name="LabelExperienciaTitulo">Años Graduado</string>
    <string name="LabelMiembro">Miembro</string>
    <string name="LabelCalificacion">Calificacion</string>
    <string name="LabelObservacion">Observacion</string>
    <!--objeto formulario-->
    <string name="placeCorreo">Ingrese su correo</string>
    <string name="placeClave">Ingrese su Clave</string>
    <string name="placeDocumento">Ingrese su numero de identificacion</string>
    <string name="placeNombre">Ingrese su(s) Nombres(s)</string>
    <string name="placeApelliido">Ingrese su(s) Apellidos(s)</string>
    <string name="placeDireccion">Ingrese su direccion de residencia</string>
    <string name="placeCiudad">Ingrese su ciudad de residencia</string>
    <string name="placeTelefono">Ingrese su numero de telefono</string>
    <string name="placeFoto">Importe una foto</string>
    <string name="placeBuscarRol">Escriba una palabra o letras asociadas al rol</string>
    <string name="placeBuscarTitulo">Escriba una palabra o letras asociadas al titulo</string>
    <string name="placeObservacion">Ingrese una observacion</string>
    <string name="InputNombre">Nombre</string>
    <string name="InputNombreDesc">Ingrese Nombre Alarma</string>
    <string name="InputHora">00</string>
    <string name="InputHoraDesc">Ingrese Hora Alarma</string>
    <string name="InputMinutos">00</string>
    <string name="InputMinutosaDesc">Ingrese Minutos Alarma</string>

    <!--invalid values -->
    <string name="invalidSelect">Seleccione</string>

    <!--Info messages -->
    <string name="candidatoCreado">Se ha creado el candidato de forma exitosa</string>
    <string name="miembroCreado">Miembro ha sido agregado al proyecto</string>
    <string name="evaluacionCreada">La evaluación ha sido guardada</string>
    <string name="preguntaCandidatoCreacion">Desea cancelar la creacion del candidato?</string>
    <string name="preguntaEvaluacion">Desea cancelar la creacion de la evaluación?</string>
    <string name="preguntaCancelaciónRegistro">Desea cancelar el registro del usuario?</string>
    <string name="advertencia">Advertencia</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <!--Error messages-->
    <string name="networkError">Error de red</string>
    <string name="invalidCredentials">Usuario o contraseña errada</string>
    <string name="sesionCerrada">Debes iniciar sesión nuevamente</string>
    <string name="sinPerfiles">NO existen perfiles en el proyecto</string>
    <string name="sinMiembros">NO existen miembros en el proyecto</string>
    <!--Info messages -->
    <string name="loginSuccess">Login existoso</string>
    <!--CreateCandidate-->
    <string name="correoInvalido">Ingrese un correo valido</string>
    <string name="claveInvalida">La clave debe contener minimo 6 caracteres.Debe incluir una Mayuscula una minuscula, numero y caracter especial</string>
    <string name="documentoInvalido">Ingrese un numero de documento entre 6 y 30 digitos.</string>
    <string name="nombreInvalido">Ingrese un nombre entre 2 y 30 caracteres.</string>
    <string name="apellidoInvalido">Ingrese un apellido entre 2 y 30 caracteres</string>
    <string name="direccionInvalida">Ingrese una direccion valida entre 8 y 60 caracteres</string>
    <string name="ciudadInvalida">Ingrese una ciudad entre 2 y 30 caracteres.</string>
    <string name="telefonoInvalido">Ingrese un telefono entre 8 y 30 digitos.</string>
    <string name="politicaInvalida">Debe aceptar la politica de datos</string>
    <string name="usuarioInvalido">Ingrese un usuario entre 6 y 30 digitos.</string>
    <!--Search Candidate-->
    <string name="proyectoInvalido">Debe seleccionar un proyecto</string>
    <string name="perfilInvalido">Debe seleccionar un perfil</string>
    <string name="miembroNoCreado">Miembro no pudo ser agregado al proyecto</string>
    <string name="miembroExistente">Miembro ya existe en el proyecto</string>
    <string name="noExistenCandidatos">No se encontraron candidatos</string>
    <!--Create evulation-->
    <string name="miembroInvalido">Debe seleccionar un miembro</string>
    <string name="calificacionInvalida">Debe seleccionar una calificacion</string>
    <string name="observacionInvalida">Ingrese un observación entre 10 y 500 caractered.</string>
    <string name="evaluacionExistente">El miembro ya tiene una evaluacion de desempeño</string>
</resources>